--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -26,13 +26,14 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/img/008.jpeg);
+  background-image: url(../img/008.jpeg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -1;
   transition: all 0.3s ease;
 }
+
 
 #tm-bg:after {
   content: "";
